@@ -14,7 +14,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Implementación del facade para la gestión de vinculaciones.
@@ -103,7 +102,7 @@ public class VinculacionFacadeImpl implements VinculacionFacade {
         return vinculacionRepository.findAllByEliminadoFalse()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -113,7 +112,7 @@ public class VinculacionFacadeImpl implements VinculacionFacade {
                 .stream()
                 .filter(v -> v.getVacante() != null && v.getVacante().getId().equals(vacanteId))
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private VinculacionResponse mapToResponse(Vinculacion v) {
